--- a/index.html
+++ b/index.html
@@ -394,6 +394,20 @@
                 </li>
             </ul>
           </div>
+          <div>
+            <p class="footer-title" >Subscribe</p>
+            <form class="subscribe-form" name="subscribe_form">
+                <label class="subscribe-form-label">
+                    <input class="subscribe-form-input" type="email" name="subscribe_form-email" placeholder="Enter your email" />
+                </label>
+                <button class="footer-btn btn accent-btn" type="submit">
+                    Subscribe
+                    <svg class="footer-btn-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                </button>
+            </form>
+          </div>
         </div>
     </footer>
     <!-- Modal window -->
