--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <form class="modal-form" name="order_form" autocomplete="off">
 
                 <div class="field">
-                    <label class="modal-form-field" for="user-name">Name</label>
+                    <label class="modal-form-field" for="user-name" name="user-name"> Name</label>
 
                         <div class="input-container">
                             <input id="user-name" class="modal-form-input" type="text" name="user_name" />
@@ -466,7 +466,7 @@
                     <label class="modal-form-field" for="user-comment">
                         Comment
                         </label>
-                        <textarea id="user-comment" class="modal-form-comment" name="user_comment" rows="7" placeholder="Text input"></textarea>
+                        <textarea id="user-comment" class="modal-form-comment" name="user-comment" rows="7" placeholder="Text input"></textarea>
                    
                 </div>
             
