--- a/portfolio.html
+++ b/portfolio.html
@@ -249,15 +249,15 @@
                     Web<span class="studio-light">Studio</span>
                 </a>
                 <p class="footer-text">
-                    Increase the flow of customers and sales for your business with digital marketing & growth
-                    solutions.
+                    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
             </div>
-
+    
             <div class="footer-list">
                 <p class="footer-title">Social media</p>
                 <ul class="footer-networks-list">
                     <li class="footer-networks-item">
+    
                         <a href="" class="footer-networks-link">
                             <svg class="footer-networks-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
@@ -286,6 +286,20 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="footer-form">
+                <p class="footer-title">Subscribe</p>
+                <form class="subscribe-form" name="subscribe_form">
+                    <label class="subscribe-form-label">
+                        <input class="subscribe-form-input" type="email" name="subscribe-form-email" placeholder="E-mail" />
+                    </label>
+                    <button class="footer-btn" type="submit">
+                        Subscribe
+                        <svg class="footer-btn-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
