--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     <label class="modal-form-field" for="user-name" name="user-name"> Name</label>
 
                         <div class="input-container">
-                            <input id="user-name" class="modal-form-input" type="text" name="user_name" />
+                            <input name="user-name" id="user-name" class="modal-form-input" type="text"/>
                             <svg class="modal-form-icon" width="18" height="24">
                                 <use href="./images/icons.svg#icon-person"></use>
                             </svg>
