--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <form class="modal-form" name="order_form" autocomplete="off">
 
                 <div class="field">
-                    <label class="modal-form-field" for="user-name" name="user-name"> Name</label>
+                    <label class="modal-form-field" for="user-name"> Name</label>
 
                         <div class="input-container">
                             <input name="user-name" id="user-name" class="modal-form-input" type="text"/>
@@ -492,9 +492,8 @@
             </form>
             </div>
             </div>
-        </div>
+        
 
-    </div>
     <script src="./js/modal.js"></script>
 </body>
 
